2/19: Massive backport, successful launch, need to do file by file warning/error checking still