@@ -3,7 +3,9 @@ package com.otterly76.ott.entity;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.mojang.datafixers.util.Pair;
+import com.otterly76.ott.entity.ai.CreakingMeleeAttack;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.util.valueproviders.UniformInt;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.ai.Brain;
@@ -14,14 +16,13 @@ import net.minecraft.world.entity.ai.sensing.SensorType;
 import net.minecraft.world.entity.schedule.Activity;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.List;
 import java.util.Optional;
 
 public class CreakingAi {
     protected static final ImmutableList<? extends SensorType<? extends Sensor<? super Creaking>>> SENSOR_TYPES;
     protected static final ImmutableList<? extends MemoryModuleType<?>> MEMORY_TYPES;
 
-    private static void initCoreActivity(Brain<Creaking> brain) {
+    static void initCoreActivity(Brain<Creaking> brain) {
         brain.addActivity(Activity.CORE, 0, ImmutableList.of(new Swim(0.8F) {
             @Override
             protected boolean checkExtraStartConditions(@NotNull ServerLevel level, @NotNull Mob mob) {
@@ -32,24 +33,12 @@ public class CreakingAi {
         }, new LookAtTargetSink(45, 90), new MoveToTargetSink()));
     }
 
-    private static void initIdleActivity(Brain<Creaking> brain) {
-        brain.addActivity(Activity.IDLE, 10, ImmutableList.of(
-                StartAttacking.create(Creaking::canMove, CreakingAi::findNearestValidAttackTarget),
-                SetEntityLookTarget.create(8.0F),
-                createIdleMovementBehaviors()
-        ));
+    static void initIdleActivity(Brain<Creaking> brain) {
+        brain.addActivity(Activity.IDLE, 10, ImmutableList.of(StartAttacking.create(Creaking::isActive, (creaking) -> creaking.getBrain().getMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER)), SetEntityLookTargetSometimes.create(8.0F, UniformInt.of(30, 60)), new RunOne<>(ImmutableList.of(Pair.of(RandomStroll.stroll(0.3F), 2), Pair.of(SetWalkTargetFromLookTarget.create(0.3F, 3), 2), Pair.of(new DoNothing(30, 60), 1)))));
     }
 
-    private static void initFightActivity(Brain<Creaking> brain) {
-        brain.addActivityAndRemoveMemoryWhenStopped(Activity.FIGHT, 10, ImmutableList.of(SetWalkTargetFromAttackTargetIfTargetOutOfReach.create(1.0F), MeleeAttack.create(40), StopAttackingIfTargetInvalid.create()), MemoryModuleType.ATTACK_TARGET);
-    }
-
-    private static Optional<? extends LivingEntity> findNearestValidAttackTarget(Creaking creaking) {
-        return creaking.getBrain().getMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER);
-    }
-
-    private static RunOne<Creaking> createIdleMovementBehaviors() {
-        return new RunOne<>(ImmutableList.of(Pair.of(RandomStroll.stroll(0.3F), 2), Pair.of(SetWalkTargetFromLookTarget.create(0.3F, 3), 2), Pair.of(new DoNothing(30, 60), 1)));
+    static void initFightActivity(Brain<Creaking> brain) {
+        brain.addActivityAndRemoveMemoryWhenStopped(Activity.FIGHT, 10, ImmutableList.of(SetWalkTargetFromAttackTargetIfTargetOutOfReach.create(1.0F), CreakingMeleeAttack.create(Creaking::canMove, 40), StopAttackingIfTargetInvalid.create()), MemoryModuleType.ATTACK_TARGET);
     }
 
     public static Brain.Provider<Creaking> brainProvider() {
@@ -67,11 +56,11 @@ public class CreakingAi {
     }
 
     public static void updateActivity(Creaking creaking) {
-        Brain<Creaking> brain = creaking.getBrain();
-
-        brain.setActiveActivityToFirstValid(
-                List.of(Activity.FIGHT, Activity.IDLE)
-        );
+        if (!creaking.canMove()) {
+            creaking.getBrain().useDefaultActivity();
+        } else {
+            creaking.getBrain().setActiveActivityToFirstValid(ImmutableList.of(Activity.FIGHT, Activity.IDLE));
+        }
     }
 
     static {
